--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>ForgeFit — The Blind PT</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0a0a0a">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="src/css/styles.ss">
 </head>
 <body>
   <header class="header">
@@ -77,6 +77,6 @@
   </div>
 
   <script> if('serviceWorker' in navigator){ navigator.serviceWorker.register('./sw.js'); } </script>
-  <script src="app.js"></script>
+  <script type="module" src="src/js/app.js"></script>
 </body>
 </html>
