--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>ForgeFit — The Blind PT</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0a0a0a">
-  <link rel="stylesheet" href="src/css/styles.ss">
+  <<link rel="stylesheet" href="src/css/styles.css">
 </head>
 <body>
   <header class="header">
