--- a/index.html
+++ b/index.html
@@ -6,8 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <title>ForgeFit — The Blind PT</title>
   <link rel="manifest" href="manifest.webmanifest">
-  <meta name="theme-color" content="#0a0a0a">
-  <<link rel="stylesheet" href="src/css/styles.css">
+  <meta na"teme-color" content="#0a0a0a">
+     <link rel="stylesheet" href="src/css/styles.css">
+
+
+
 </head>
 <body>
   <header class="header">
