--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>ForgeFit — The Blind PT</title>
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#0a0a0a">
-  <link rel="stylesheet" href="src/css/styles.css">
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header class="header">
@@ -87,6 +87,6 @@
       navigator.serviceWorker.register('./sw.js');
     }
   </script>
-  <script type="module" src="src/js/app.js"></script>
+  <script type="module" src="js/app.js"></script>
 </body>
 </html>
