--- a/index.html
+++ b/index.html
@@ -88,5 +88,6 @@
     }
   </script>
   <script type="module" src="js/app.js"></script>
+  <script type="module" src="src/js/hotfix.js?v=7"></script>
 </body>
 </html>
